# sendfiles

./: .gitignore  README.md  docker-compose.yml
backend/: Cargo.toml  main.rs
backend/coord/: Cargo.toml
backend/coord/src/: errors.rs  main.rs  message.rs  offer.rs  request.rs  response.rs
backend/transfers/: Cargo.toml
backend/transfers/src/: main.rs  transfer_details.rs
frontend/: Dockerfile  package-lock.json  package.json
frontend/public/: architecture.excalidraw  index.html  manifest.json
frontend/src/: AboutApp.css  AboutApp.js  App.css  App.js  ClipboardButton.css  ClipboardButton.js  Config.js  Constants.js  Crypto.js  File.js  FileTransfer.js  Nav.css  Nav.js  ReceiveApp.css  ReceiveApp.js  SendApp.css  SendApp.js  Utils.js  index.css  index.js
scripts/: build-coord-lambda.sh  build-transfers-lambda-local.sh  build-transfers-lambda.sh  build.sh  deploy-backend.sh  deploy-statics.sh  dev.sh
terraform/: backend.tf  coord.tf  coord_certs.tf  coord_gateway.tf  data.tf  main.tf  providers.tf  remote_state.tf  route53.tf  statics.tf  transfers.tf  transfers_certs.tf  transfers_gateway.tf
