[package]
name = "coord"
version = "0.1.0"
authors = ["Josh Chorlton <jchorlton@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws-config = "1.1.1"
aws-sdk-apigatewaymanagement = "1.10.0"
aws-sdk-dynamodb = "1.9.0"
aws_lambda_events = "0.13.0"
chrono = { version = "0.4", features = ["serde"] }
lambda_http = "0.9.0"
lambda_runtime = "0.9.0"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
tokio = { version = "1.35", features = ["full"] }
