[package]
name = "securesend"
version = "0.1.0"
authors = ["Josh Chorlton <jchorlton@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
dynomite = "0.10"
lambda_http = { git = "https://github.com/awslabs/aws-lambda-rust-runtime" }
lambda_runtime = "0.2.1"
rusoto_core = "0.45"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
tokio = "0.2"
uuid = { version = "0.8", features = ["v4"] }
