[package]
name = "securesend"
version = "0.1.0"
authors = ["Josh Chorlton <jchorlton@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws-config = "1.1.1"
aws-sdk-dynamodb = "1.9.0"
chrono = { version = "0.4", features = ["serde"] }
http = "1.0.0"
lambda_http = "0.9.0"
lambda_runtime = "0.9.0"
log = "0.4.20"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
tokio = { version = "1.35", features = ["full"] }
uuid = { version = "1.6.1", features = ["v4"] }
