[package]
name = "transfers"
version = "0.2.0"
authors = ["Josh Chorlton <jchorlton@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws-config = "1.5.10"
aws-sdk-dynamodb = "1.54.0"
base64 = "0.22.1"
chrono = { version = "0.4", features = ["serde"] }
env_logger = "0.11.5"
http = "1.1.0"
lambda_http = "0.13.0"
lambda_runtime = "0.13.0"
log = "0.4.22"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
tokio = { version = "1.41", features = ["full"] }
uuid = { version = "1.11.0", features = ["v4"] }
